[package]
name = "thelasthurrahcomments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
async-graphql = {version = "2.10.8", features = ["chrono"]}
async-graphql-actix-web = "2.10.8"
chrono = {version = "0.4.19", features = ["serde"]}
diesel = {version = "1.4.8", features = ["chrono", "postgres", "r2d2"]}
diesel-derive-enum = {version = "1.1.1", features = ["postgres"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = { version = "1.0.130", features = ["derive"]}
serde_derive = "1.0.130"
serde_json = "1.0.68"
tokio = "1.13.0"
